--- a/src/components/App.css
+++ b/src/components/App.css
@@ -1,7 +1,5 @@
-@import url("https://fonts.googleapis.com/css?family=Raleway:200,300,400,500,600,700,800,900&display=swap");
+@import url("https://fonts.googleapis.com/css?family=Poppins:200,300,400,500,600,700,800,900&display=swap");
 
 body {
-	font-family: 'Raleway' !important;
-	font-size: 14px;
-	font-weight: 300;
+	font-family: 'Poppins';
 };
